[tool.poetry]
name = "bad-dragon-watcher"
version = "0.1.0"
description = ""
authors = ["pimani <pimanipb@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8.2"
discord = "^1.0.1"
requests = "^2.24.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
